[package]
name = "alpha-geo-dev"
version = "0.0.4"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[profile.dev]
opt-level = 's'

[profile.release]
opt-level = 3
strip = true
lto = true

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
